<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_browser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#359FF8"
        android:text="@string/button_label_browser" />
    <Button
        android:id="@+id/button_toast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#359FF8"
        android:text="@string/button_label_toast"
        app:cornerRadius="20dp" />

    <TextView
        android:id="@+id/show_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/count_initial_value"
        android:textSize="160sp"
        android:background="#FFFF00"
        android:gravity="center"/>

    <Button
        android:id="@+id/button_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_label_count"
        android:background="#359FF8"
        app:cornerRadius="20dp" />

    <Button
        android:id="@+id/button_switchpage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#359FF8"
        android:text="@string/button_label_pindah"
        app:cornerRadius="20dp" />


</LinearLayout>